--- a/index.html
+++ b/index.html
@@ -3,19 +3,19 @@ layout: workshop      # DON'T CHANGE THIS.
 root: .               # DON'T CHANGE THIS EITHER.  (THANK YOU.)
 carpentry: "swc"    # what kind of Carpentry (must be either "dc" or "swc")
 venue: "University of Oxford"        # brief name of host site without address (e.g., "Euphoric State University")
-address: "The Oxford Research Centre in the Humanities, Woodstock Rd, Oxford OX2"      # full street address of workshop (e.g., "Room A, 123 Forth Street, Blimingen, Euphoria")
+address: "IT Suite, Manor Road Building, Manor Road, Oxford OX1 3UQ"      # full street address of workshop (e.g., "Room A, 123 Forth Street, Blimingen, Euphoria")
 country: "UK"      # lowercase two-letter ISO country code such as "fr" (see https://en.wikipedia.org/wiki/ISO_3166-1)
 language: "EN"     # lowercase two-letter ISO language code such as "fr" (see https://en.wikipedia.org/wiki/ISO_639-1)
-latlng: "51.760167, -1.262284"       # decimal latitude and longitude of workshop venue (e.g., "41.7901128,-87.6007318" - use http://www.latlong.net/)
-humandate: "Feb 13--14, 2017"    # human-readable dates for the workshop (e.g., "Feb 17-18, 2020")
+latlng: "51.757295, -1.246788"       # decimal latitude and longitude of workshop venue (e.g., "41.7901128,-87.6007318" - use http://www.latlong.net/)
+humandate: "March 13--14, 2017"    # human-readable dates for the workshop (e.g., "Feb 17-18, 2020")
 humantime: "9:00--17:00"    # human-readable times for the workshop (e.g., "9:00 am - 4:30 pm")
-startdate: 2017-02-13      # machine-readable start date for the workshop in YYYY-MM-DD format like 2015-01-01
-enddate: 2017-02-14        # machine-readable end date for the workshop in YYYY-MM-DD format like 2015-01-02
-instructor: ["Marco Chiapello", "Martin Hadley"] # boxed, comma-separated list of instructors' names as strings, like ["Kay McNulty", "Betty Jennings", "Betty Snyder"]
-helper: ["TBD"]     # boxed, comma-separated list of helpers' names, like ["Marlyn Wescoff", "Fran Bilas", "Ruth Lichterman"]
-contact: ["mc983@cam.ac.uk", "martin.hadley@it.ox.ac.uk"]    # boxed, comma-separated list of contact email addresses for the host, lead instructor, or whoever else is handling questions, like ["marlyn.wescoff@example.org", "fran.bilas@example.org", "ruth.lichterman@example.org"]
+startdate: 2017-03-13      # machine-readable start date for the workshop in YYYY-MM-DD format like 2015-01-01
+enddate: 2017-03-14        # machine-readable end date for the workshop in YYYY-MM-DD format like 2015-01-02
+instructor: ["TBC", "Martin Hadley"] # boxed, comma-separated list of instructors' names as strings, like ["Kay McNulty", "Betty Jennings", "Betty Snyder"]
+helper: ["TBC"]     # boxed, comma-separated list of helpers' names, like ["Marlyn Wescoff", "Fran Bilas", "Ruth Lichterman"]
+contact: ["martin.hadley@it.ox.ac.uk"]    # boxed, comma-separated list of contact email addresses for the host, lead instructor, or whoever else is handling questions, like ["marlyn.wescoff@example.org", "fran.bilas@example.org", "ruth.lichterman@example.org"]
 etherpad:             # optional: URL for the workshop Etherpad if there is one
-eventbrite:  "31594116854"         # optional: alphanumeric key for Eventbrite registration, e.g., "1234567890AB" (if Eventbrite is being used)
+eventbrite:  "32071907940"         # optional: alphanumeric key for Eventbrite registration, e.g., "1234567890AB" (if Eventbrite is being used)
 ---
 
 <!-- See instructions in the comments below for how to edit specific sections of this workshop template. -->
@@ -39,7 +39,7 @@ eventbrite:  "31594116854"         # optional: alphanumeric key for Eventbrite r
 -->
 {% if page.eventbrite %}
 <iframe
-  src="https://www.eventbrite.com/tickets-external?eid=31594116854"
+  src="https://www.eventbrite.com/tickets-external?eid=32071907940"
   frameborder="0"
   width="100%"
   height="400px"
@@ -56,14 +56,13 @@ eventbrite:  "31594116854"         # optional: alphanumeric key for Eventbrite r
   the pitch.
 -->
 <p>
-  <a href="{{site.swc_site}}">Software Carpentry</a>'s mission
-  is to help researchers get more research done in less
-  time and with less pain by teaching them basic skills for
-  research computing.  This hands-on workshop will cover basic
-  concepts and tools, including program design, version control, data
-  management, and task automation.  Participants will be encouraged to
-  help one another and to apply what they have learned to their own
-  research problems.
+  <a href="{{site.swc_site}}">Software Carpentry</a>'s mission is to
+  help researchers get more research done in less time and with less
+  pain by teaching them basic skills for research computing. This
+  hands-on workshop will cover basic concepts and tools, including
+  program design, version control, data management, and task
+  automation.  Participants will be encouraged to help one another and
+  to apply what they have learned to their own research problems.
 </p>
 <p align="center">
   <em>
