--- a/index.html
+++ b/index.html
@@ -1,19 +1,19 @@
 ---
 layout: workshop      # DON'T CHANGE THIS.
 root: .               # DON'T CHANGE THIS EITHER.  (THANK YOU.)
-carpentry: "swc"    # what kind of Carpentry (must be either "dc" or "swc")
+carpentry: "dc"    # what kind of Carpentry (must be either "dc" or "swc")
 venue: "University of Oxford"        # brief name of host site without address (e.g., "Euphoric State University")
-address: "IT Suite, Manor Road Building, Manor Road, Oxford OX1 3UQ"      # full street address of workshop (e.g., "Room A, 123 Forth Street, Blimingen, Euphoria")
+address: "Department of Anthropology,64 Banbury Road, Oxford OX2 6PE"      # full street address of workshop (e.g., "Room A, 123 Forth Street, Blimingen, Euphoria")
 country: "UK"      # lowercase two-letter ISO country code such as "fr" (see https://en.wikipedia.org/wiki/ISO_3166-1)
 language: "EN"     # lowercase two-letter ISO language code such as "fr" (see https://en.wikipedia.org/wiki/ISO_639-1)
-latlng: "51.757295, -1.246788"       # decimal latitude and longitude of workshop venue (e.g., "41.7901128,-87.6007318" - use http://www.latlong.net/)
-humandate: "March 13--14, 2017"    # human-readable dates for the workshop (e.g., "Feb 17-18, 2020")
+latlng: "51.764476, -1.260328"       # decimal latitude and longitude of workshop venue (e.g., "41.7901128,-87.6007318" - use http://www.latlong.net/)
+humandate: "Sep 26-27, 2017"    # human-readable dates for the workshop (e.g., "Feb 17-18, 2020")
 humantime: "9:00--17:00"    # human-readable times for the workshop (e.g., "9:00 am - 4:30 pm")
-startdate: 2017-03-13      # machine-readable start date for the workshop in YYYY-MM-DD format like 2015-01-01
-enddate: 2017-03-14        # machine-readable end date for the workshop in YYYY-MM-DD format like 2015-01-02
-instructor: ["Maja Založnik", "Laura Fortunato", "Martin Hadley"] # boxed, comma-separated list of instructors' names as strings, like ["Kay McNulty", "Betty Jennings", "Betty Snyder"]
-helper: ["Matt South", "Julian Jordan", "Tom Russell"]     # boxed, comma-separated list of helpers' names, like ["Marlyn Wescoff", "Fran Bilas", "Ruth Lichterman"]
-contact: ["maja.zaloznik@ageing.ox.ac.uk"]    # boxed, comma-separated list of contact email addresses for the host, lead instructor, or whoever else is handling questions, like ["marlyn.wescoff@example.org", "fran.bilas@example.org", "ruth.lichterman@example.org"]
+startdate: 2017-09-26      # machine-readable start date for the workshop in YYYY-MM-DD format like 2015-01-01
+enddate: 2017-09-27        # machine-readable end date for the workshop in YYYY-MM-DD format like 2015-01-02
+instructor: ["Iain Emsley"] # boxed, comma-separated list of instructors' names as strings, like ["Kay McNulty", "Betty Jennings", "Betty Snyder"]
+helper: ["Laura Fortunato", "Pip Willcox"]     # boxed, comma-separated list of helpers' names, like ["Marlyn Wescoff", "Fran Bilas", "Ruth Lichterman"]
+contact: ["iain.emsley@oerc.ox.ac.uk"]    # boxed, comma-separated list of contact email addresses for the host, lead instructor, or whoever else is handling questions, like ["marlyn.wescoff@example.org", "fran.bilas@example.org", "ruth.lichterman@example.org"]
 etherpad:             # optional: URL for the workshop Etherpad if there is one
 eventbrite:  "32071907940"         # optional: alphanumeric key for Eventbrite registration, e.g., "1234567890AB" (if Eventbrite is being used)
 ---
@@ -56,7 +56,7 @@ eventbrite:  "32071907940"         # optional: alphanumeric key for Eventbrite r
   the pitch.
 -->
 <p>
-  <a href="{{site.swc_site}}">Software Carpentry</a>'s mission is to
+  <a href="{{site.dc_site}}">Data Carpentry</a>'s mission is to
   help researchers get more research done in less time and with less
   pain by teaching them basic skills for research computing. This
   hands-on workshop will cover basic concepts and tools, including
@@ -203,7 +203,7 @@ Twitter <a href="http://twitter.com/RR_Oxford">@RR_Oxford</a>.
 <p><a href="{{ site.pre_survey }}{{ site.github.project_title }}">Pre-workshop Survey</a></p>
 <p><a href="{{ site.post_survey }}{{ site.github.project_title }}">Post-workshop Survey</a></p>
 
-<div class="row">
+<!--<div class="row">
   <div class="col-md-6">
     <h3>Day 1</h3>
     <table class="table table-striped">
@@ -226,7 +226,7 @@ Twitter <a href="http://twitter.com/RR_Oxford">@RR_Oxford</a>.
       <tr> <td>16:00</td>  <td>Wrap-up</td> </tr>
     </table>
   </div>
-</div>
+</div> -->
 
 <!--
   ETHERPAD
@@ -269,7 +269,7 @@ Twitter <a href="http://twitter.com/RR_Oxford">@RR_Oxford</a>.
   please preview your site before committing, and make sure to run
   'tools/check' as well.
 -->
-<h2 id="syllabus">Syllabus</h2>
+<!--<h2 id="syllabus">Syllabus</h2>
 
 <div class="row">
   <div class="col-md-6">
@@ -332,7 +332,7 @@ Twitter <a href="http://twitter.com/RR_Oxford">@RR_Oxford</a>.
      </ul>
    </div>
    -->
-</div>
+<!-- </div>
 
 <div class="row">
   <div class="col-md-6">
@@ -363,7 +363,7 @@ Twitter <a href="http://twitter.com/RR_Oxford">@RR_Oxford</a>.
       <li><a href="{{site.swc_pages}}/sql-novice-survey/reference/">Reference...</a></li>
     </ul>
   </div> -->
-</div>
+<!--</div> -->
 
 <hr/>
 
