Updating survey links

--- a/index.html
+++ b/index.html
@@ -200,8 +200,8 @@ Twitter <a href="http://twitter.com/RR_Oxford">@RR_Oxford</a>.
 <!-- DO NOT EDIT SURVEY LINKS -->
 <p><em>Surveys</em></p>
 <p>Please be sure to complete these surveys before and after the workshop.</p>
-<p><a href="{{ site.pre_survey }}{{ site.github.project_title }}">Pre-workshop Survey</a></p>
-<p><a href="{{ site.post_survey }}{{ site.github.project_title }}">Post-workshop Survey</a></p>
+<p><a href="https://www.surveymonkey.com/r/dcpreworkshopassessment{{ site.github.project_title }}">Pre-workshop Survey</a></p>
+<p><a href="https://www.surveymonkey.com/r/dcpostworkshopassessment{{ site.github.project_title }}">Post-workshop Survey</a></p>
 
 <!--<div class="row">
   <div class="col-md-6">
