Update missing div

--- a/index.html
+++ b/index.html
@@ -472,7 +472,9 @@ once you leave the workshop.
         <code>/Applications/Utilities</code>).
         See the Git installation <a href="https://www.youtube.com/watch?v=9LQhwETCdwY ">video tutorial</a>
         for an example on how to open the Terminal.
-
+         </div>
+  </div>
+</div> <!-- End of 'Shell' section. -->
 
 <div id="git"> <!-- Start of 'Git' section. GitHub browser compatability
            is given at https://help.github.com/articles/supported-browsers/-->
