Fix broken comment

--- a/index.html
+++ b/index.html
@@ -477,35 +477,35 @@ once you leave the workshop.
 </div> <!-- End of 'Shell' section. -->
 
 <div id="git"> <!-- Start of 'Git' section. GitHub browser compatability
-           is given at https://help.github.com/articles/supported-browsers/-->
-  <h3>Git</h3>
-  <p>
-    Git is a version control system that lets you track who made changes
-    to what when and has options for easily updating a shared or public
-    version of your code
-    on <a href="https://github.com/">github.com</a>. You will need a
-    <a href="https://help.github.com/articles/supported-browsers/">supported</a>
-    web browser (current versions of Chrome, Firefox or Safari,
-    or Internet Explorer version 9 or above).
-  </p>
-  <p>
-    You will need an account at <a href="https://github.com/">github.com</a>
-    for parts of the Git lesson. Basic GitHub accounts are free. We encourage
-    you to create a GitHub account if you don't have one already.
-    Please consider what personal information you'd like to reveal. For
-    example, you may want to review these
-    <a href="https://help.github.com/articles/keeping-your-email-address-private/">instructions
-    for keeping your email address private</a> provided at GitHub.
-  </p>
+   is given at https://help.github.com/articles/supported-browsers/-->
+<h3>Git</h3>
+<p>
+Git is a version control system that lets you track who made changes
+to what when and has options for easily updating a shared or public
+version of your code
+on <a href="https://github.com/">github.com</a>. You will need a
+<a href="https://help.github.com/articles/supported-browsers/">supported</a>
+web browser (current versions of Chrome, Firefox or Safari,
+or Internet Explorer version 9 or above).
+</p>
+<p>
+You will need an account at <a href="https://github.com/">github.com</a>
+for parts of the Git lesson. Basic GitHub accounts are free. We encourage
+you to create a GitHub account if you don't have one already.
+Please consider what personal information you'd like to reveal. For
+example, you may want to review these
+<a href="https://help.github.com/articles/keeping-your-email-address-private/">instructions
+for keeping your email address private</a> provided at GitHub.
+</p>
 
-  <div class="row">
-    <div class="col-md-4">
-      <h4 id="git-windows">Windows</h4>
-      <p>
-        Git should be installed on your computer as part of your Bash
-        install (described above).
-      </p>
-    </div>
+<div class="row">
+<div class="col-md-4">
+<h4 id="git-windows">Windows</h4>
+<p>
+Git should be installed on your computer as part of your Bash
+install (described above).
+</p>
+</div>
     <div class="col-md-4">
       <h4 id="git-macosx">Mac OS X</h4>
       <a href="https://www.youtube.com/watch?v=9LQhwETCdwY ">Video Tutorial</a>
@@ -769,7 +769,7 @@ once you leave the workshop.
   <p><strong>If you installed Anaconda, it also has a copy of SQLite
     <a href="https://github.com/ContinuumIO/anaconda-issues/issues/307">without support to <code>readline</code></a>.
     Instructors will provide a workaround for it if needed.</strong></p>
-</div> End of 'SQLite' section. -->
+</div> <!--End of 'SQLite' section. -->
 
 <!--
   Uncomment this section if you are using our virtual machine.
