--- a/index.html
+++ b/index.html
@@ -310,7 +310,7 @@ Twitter <a href="http://twitter.com/RR_Oxford">@RR_Oxford</a>.
     </ul>
   </div>
   -->
-  <!--<div class="col-md-6">
+  <div class="col-md-6">
     <h3>Programming in Python</h3>
     <ul>
       <li>Using libraries</li>
@@ -318,11 +318,9 @@ Twitter <a href="http://twitter.com/RR_Oxford">@RR_Oxford</a>.
       <li>Reading and plotting data</li>
       <li>Creating and using functions</li>
       <li>Loops and conditionals</li>
-      <li>Defensive programming</li>
-      <li>Using Python from the command line</li>
       <li><a href="{{site.swc_lessons}}/ref/03-python.html">Reference...</a></li>
     </ul>
-  </div>-->
+  </div>
   <!--
   <div class="col-md-6">
     <h3 id="syllabus-matlab">Programming in MATLAB</h3>
@@ -353,7 +351,7 @@ Twitter <a href="http://twitter.com/RR_Oxford">@RR_Oxford</a>.
       <li><a href="{{site.swc_pages}}/git-novice/reference/">Reference...</a></li>
     </ul>
   </div> -->
-<!--<div class="col-md-6">
+<!-- class="col-md-6">
     <h3 id="syllabus-sql">Managing Data with SQL</h3>
     <ul>
       <li>Reading and sorting data</li>
@@ -366,8 +364,41 @@ Twitter <a href="http://twitter.com/RR_Oxford">@RR_Oxford</a>.
       <li>Programming with databases</li>
       <li><a href="{{site.swc_pages}}/sql-novice-survey/reference/">Reference...</a></li>
     </ul>
+  </div>-->
+  <div class="col-md-4">
+    <h3 id="syllabus-spreadsheets">Data Organisation in Spreadsheets</h3>
+    <ul>
+      <li>Formatting data tables in Spreadsheets</li>
+      <li>Formatting Problems</li>
+      <li>Dates as data</li>
+      <li>Quality Control</li>
+      <li>Exporting data</li>
+      <li><a href="https://github.com/iaine/spreadsheet-humanities-lesson/">Reference...</a></li>
+    </ul>
   </div>
-</div> -->
+
+    <div class="col-md-4">
+    <h3 id="syllabus-openrefine">Data Cleaning with OpenRefine</h3>
+    <ul>
+      <li>Working with OpenRefine</li>
+      <li>Filerting and Sorting with OpenRefine</li>
+      <li>Examining Numbers in OpenRefine</li>
+      <li>Exporting and Saving Data from OpenRefine</li>
+      <li><a href="https://github.com/iaine/OpenRefine-humanities-lesson/">Reference...</a></li>
+    </ul>
+</div>
+  <div class="col-md-4">
+    <h3 id="syllabus-sql">Data Management with SQL</h3>
+    <ul>
+      <li>Databases using SQL</li>
+      <li>Basic Queries</li>
+      <li>SQL Aggregation</li>
+      <li>Joins and aliases</li>
+      <li>R and Databases</li>
+      <li><a href="https://github.com/iaine/sql-humanities-lesson/">Reference...</a></li>
+    </ul>
+</div>
+</div> 
 
 <hr/>
 
