--- a/index.html
+++ b/index.html
@@ -318,7 +318,7 @@ Twitter <a href="http://twitter.com/RR_Oxford">@RR_Oxford</a>.
       <li>Reading and plotting data</li>
       <li>Creating and using functions</li>
       <li>Loops and conditionals</li>
-      <li><a href="{{site.swc_lessons}}/ref/03-python.html">Reference...</a></li>
+      <li><a href="www.musicofsound.org/python-humanities-lesson/">Reference...</a></li>
     </ul>
   </div>
   <!--
@@ -373,7 +373,7 @@ Twitter <a href="http://twitter.com/RR_Oxford">@RR_Oxford</a>.
       <li>Dates as data</li>
       <li>Quality Control</li>
       <li>Exporting data</li>
-      <li><a href="https://github.com/iaine/spreadsheet-humanities-lesson/">Reference...</a></li>
+      <li><a href="http://www.musicofsound.org/spreadsheet-humanities-lesson/">Reference...</a></li>
     </ul>
   </div>
 
@@ -384,7 +384,7 @@ Twitter <a href="http://twitter.com/RR_Oxford">@RR_Oxford</a>.
       <li>Filerting and Sorting with OpenRefine</li>
       <li>Examining Numbers in OpenRefine</li>
       <li>Exporting and Saving Data from OpenRefine</li>
-      <li><a href="https://github.com/iaine/OpenRefine-humanities-lesson/">Reference...</a></li>
+      <li><a href="http://www.musicofsound.org/OpenRefine-humanities-lesson/">Reference...</a></li>
     </ul>
 </div>
   <div class="col-md-4">
@@ -395,7 +395,7 @@ Twitter <a href="http://twitter.com/RR_Oxford">@RR_Oxford</a>.
       <li>SQL Aggregation</li>
       <li>Joins and aliases</li>
       <li>R and Databases</li>
-      <li><a href="https://github.com/iaine/sql-humanities-lesson/">Reference...</a></li>
+      <li><a href="http://www.musicofsound.org/sql-humanities-lesson/">Reference...</a></li>
     </ul>
 </div>
 </div> 
