--- a/index.html
+++ b/index.html
@@ -318,7 +318,7 @@ Twitter <a href="http://twitter.com/RR_Oxford">@RR_Oxford</a>.
       <li>Reading and plotting data</li>
       <li>Creating and using functions</li>
       <li>Loops and conditionals</li>
-      <li><a href="www.musicofsound.org/python-humanities-lesson/">Reference...</a></li>
+      <li><a href="http://www.musicofsound.org/python-humanities-lesson/">Reference...</a></li>
     </ul>
   </div>
   <!--
