--- a/index.html
+++ b/index.html
@@ -2,18 +2,18 @@
 layout: workshop      # DON'T CHANGE THIS.
 root: .               # DON'T CHANGE THIS EITHER.  (THANK YOU.)
 carpentry: "dc"    # what kind of Carpentry (must be either "dc" or "swc")
-venue: "University of Oxford"        # brief name of host site without address (e.g., "Euphoric State University")
-address: "Institute of Cognitive and Evolutionary Anthropology, 64 Banbury Road, Oxford, OX2 6PN"      # full street address of workshop (e.g., "Room A, 123 Forth Street, Blimingen, Euphoria")
+venue: "Edinburgh University"        # brief name of host site without address (e.g., "Euphoric State University")
+address: "Edinburgh"      # full street address of workshop (e.g., "Room A, 123 Forth Street, Blimingen, Euphoria")
 country: "UK"      # lowercase two-letter ISO country code such as "fr" (see https://en.wikipedia.org/wiki/ISO_3166-1)
 language: "EN"     # lowercase two-letter ISO language code such as "fr" (see https://en.wikipedia.org/wiki/ISO_639-1)
 latlng: "51.764476, -1.260328"       # decimal latitude and longitude of workshop venue (e.g., "41.7901128,-87.6007318" - use http://www.latlong.net/)
-humandate: "Sep 26-27, 2017"    # human-readable dates for the workshop (e.g., "Feb 17-18, 2020")
+humandate: "Jun 4-6, 2019"    # human-readable dates for the workshop (e.g., "Feb 17-18, 2020")
 humantime: "9:00--17:00"    # human-readable times for the workshop (e.g., "9:00 am - 4:30 pm")
-startdate: 2017-09-26      # machine-readable start date for the workshop in YYYY-MM-DD format like 2015-01-01
-enddate: 2017-09-27        # machine-readable end date for the workshop in YYYY-MM-DD format like 2015-01-02
-instructor: ["Iain Emsley", "Lucia Michielin", "Pip Willcox"] # boxed, comma-separated list of instructors' names as strings, like ["Kay McNulty", "Betty Jennings", "Betty Snyder"]
-helper: ["Laura Fortunato", "Aaron Ceross", "Stephen Jones", "Alex Orlek"]     # boxed, comma-separated list of helpers' names, like ["Marlyn Wescoff", "Fran Bilas", "Ruth Lichterman"]
-contact: ["iain.emsley@oerc.ox.ac.uk"]    # boxed, comma-separated list of contact email addresses for the host, lead instructor, or whoever else is handling questions, like ["marlyn.wescoff@example.org", "fran.bilas@example.org", "ruth.lichterman@example.org"]
+startdate: 2019-06-04      # machine-readable start date for the workshop in YYYY-MM-DD format like 2015-01-01
+enddate: 2019-06-05        # machine-readable end date for the workshop in YYYY-MM-DD format like 2015-01-02
+instructor: ["Iain Emsley"] # boxed, comma-separated list of instructors' names as strings, like ["Kay McNulty", "Betty Jennings", "Betty Snyder"]
+helper: ["Lucia Michielin"]     # boxed, comma-separated list of helpers' names, like ["Marlyn Wescoff", "Fran Bilas", "Ruth Lichterman"]
+contact: ["i.emsley@sussex.ac.uk"]    # boxed, comma-separated list of contact email addresses for the host, lead instructor, or whoever else is handling questions, like ["marlyn.wescoff@example.org", "fran.bilas@example.org", "ruth.lichterman@example.org"]
 etherpad:             # optional: URL for the workshop Etherpad if there is one
 eventbrite:  "37033429986"         # optional: alphanumeric key for Eventbrite registration, e.g., "1234567890AB" (if Eventbrite is being used)
 day1_am: "Data organization in spreadsheets and OpenRefine"
@@ -90,7 +90,7 @@ Twitter <a href="http://twitter.com/RR_Oxford">@RR_Oxford</a>.
 -->
 <p id="who">
   <strong>Who:</strong> The course is aimed at students, researchers,
-  and staff of the University of Oxford. <strong>Please register with
+  and staff of the Edinburgh University. <strong>Please register with
   your .ox.ac.uk email address.</strong>
 </p>
 <p align="center">
