--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@ day2_pm: "SQL for data management"
   are not using Eventbrite, or leave it in, since it will not be
   displayed if the 'eventbrite' field in the header is not set.
 -->
-{% if page.eventbrite %}
+<!--{% if page.eventbrite %}
 <iframe
   src="https://www.eventbrite.com/tickets-external?eid=37033429986"
   frameborder="0"
