--- a/index.html
+++ b/index.html
@@ -90,8 +90,8 @@ Twitter <a href="http://twitter.com/RR_Oxford">@RR_Oxford</a>.
 -->
 <p id="who">
   <strong>Who:</strong> The course is aimed at students, researchers,
-  and staff of the Edinburgh University. <strong>Please register with
-  your .ox.ac.uk email address.</strong>
+  and staff of the Edinburgh University. <!--<strong>Please register with
+  your .ox.ac.uk email address.</strong>-->
 </p>
 <p align="center">
   <strong>
