--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@ enddate: 2019-06-05        # machine-readable end date for the workshop in YYYY-
 instructor: ["Iain Emsley, Stephen Worthington, TBC"] # boxed, comma-separated list of instructors' names as strings, like ["Kay McNulty", "Betty Jennings", "Betty Snyder"]
 helper: ["Lucia Michielin, TBC"]     # boxed, comma-separated list of helpers' names, like ["Marlyn Wescoff", "Fran Bilas", "Ruth Lichterman"]
 contact: ["i.emsley@sussex.ac.uk"]    # boxed, comma-separated list of contact email addresses for the host, lead instructor, or whoever else is handling questions, like ["marlyn.wescoff@example.org", "fran.bilas@example.org", "ruth.lichterman@example.org"]
-etherpad:             # optional: URL for the workshop Etherpad if there is one
+collaborative_notes: "https://pad.carpentries.org/2019-06-04-edinburgh"            # optional: URL for the workshop Etherpad if there is one
 eventbrite:  "37033429986"         # optional: alphanumeric key for Eventbrite registration, e.g., "1234567890AB" (if Eventbrite is being used)
 day1_am: "Data organization in spreadsheets and OpenRefine"
 day1_pm: "Introduction to Python"
