--- a/index.html
+++ b/index.html
@@ -3,19 +3,19 @@ layout: workshop      # DON'T CHANGE THIS.
 root: .               # DON'T CHANGE THIS EITHER.  (THANK YOU.)
 carpentry: "dc"    # what kind of Carpentry (must be either "dc" or "swc")
 venue: "Edinburgh University"        # brief name of host site without address (e.g., "Euphoric State University")
-address: "Room 1.2, Lister Learning and Teaching Centre, 5 Roxburgh Pl, Edinburgh EH8 9SU"      # full street address of workshop (e.g., "Room A, 123 Forth Street, Blimingen, Euphoria")
+address: "TBC"      # full street address of workshop (e.g., "Room A, 123 Forth Street, Blimingen, Euphoria")
 country: "UK"      # lowercase two-letter ISO country code such as "fr" (see https://en.wikipedia.org/wiki/ISO_3166-1)
 language: "EN"     # lowercase two-letter ISO language code such as "fr" (see https://en.wikipedia.org/wiki/ISO_639-1)
 latlng: "55.9470777,-3.1863584,17"       # decimal latitude and longitude of workshop venue (e.g., "41.7901128,-87.6007318" - use http://www.latlong.net/)
-humandate: "Jun 4-5, 2019"    # human-readable dates for the workshop (e.g., "Feb 17-18, 2020")
+humandate: "March 27 and 30, 2020"    # human-readable dates for the workshop (e.g., "Feb 17-18, 2020")
 humantime: "9:00--17:00"    # human-readable times for the workshop (e.g., "9:00 am - 4:30 pm")
-startdate: 2019-06-04      # machine-readable start date for the workshop in YYYY-MM-DD format like 2015-01-01
-enddate: 2019-06-05        # machine-readable end date for the workshop in YYYY-MM-DD format like 2015-01-02
-instructor: ["Iain Emsley, Stephen Worthington, Lucia Michielin, Paddy McCann"] # boxed, comma-separated list of instructors' names as strings, like ["Kay McNulty", "Betty Jennings", "Betty Snyder"]
-helper: ["Adam Ferron, Justin Ho, Luis Reyes, Kevin Le"]     # boxed, comma-separated list of helpers' names, like ["Marlyn Wescoff", "Fran Bilas", "Ruth Lichterman"]
-contact: ["i.emsley@sussex.ac.uk"]    # boxed, comma-separated list of contact email addresses for the host, lead instructor, or whoever else is handling questions, like ["marlyn.wescoff@example.org", "fran.bilas@example.org", "ruth.lichterman@example.org"]
-collaborative_notes: "https://pad.carpentries.org/2019-06-04-edinburgh"            # optional: URL for the workshop Etherpad if there is one
-eventbrite:  "37033429986"         # optional: alphanumeric key for Eventbrite registration, e.g., "1234567890AB" (if Eventbrite is being used)
+startdate: 2020-03-27      # machine-readable start date for the workshop in YYYY-MM-DD format like 2015-01-01
+enddate: 2020-03-30        # machine-readable end date for the workshop in YYYY-MM-DD format like 2015-01-02
+instructor: ["Matthew Hamilton, Giacomo Peru, TBC"] # boxed, comma-separated list of instructors' names as strings, like ["Kay McNulty", "Betty Jennings", "Betty Snyder"]
+helper: ["TBC"]     # boxed, comma-separated list of helpers' names, like ["Marlyn Wescoff", "Fran Bilas", "Ruth Lichterman"]
+contact: ["lucia.michielin@ed.ac.uk"]    # boxed, comma-separated list of contact email addresses for the host, lead instructor, or whoever else is handling questions, like ["marlyn.wescoff@example.org", "fran.bilas@example.org", "ruth.lichterman@example.org"]
+collaborative_notes: "https://pad.carpentries.org/2020-03-27-edinburgh-dc"            # optional: URL for the workshop Etherpad if there is one
+eventbrite:  ""         # optional: alphanumeric key for Eventbrite registration, e.g., "1234567890AB" (if Eventbrite is being used)
 day1_am: "Data organization in spreadsheets and OpenRefine"
 day1_pm: "Introduction to Python"
 day2_am: "Data analysis and visualization in Python"
