--- a/index.html
+++ b/index.html
@@ -313,7 +313,7 @@ Twitter <a href="http://twitter.com/RR_Oxford">@RR_Oxford</a>.
       <li>Reading and plotting data</li>
       <li>Creating and using functions</li>
       <li>Loops and conditionals</li>
-      <li><a href="http://www.musicofsound.org/python-humanities-lesson/">Reference...</a></li>
+      <li><a href="https://carpentries-incubator.github.io/python-humanities-lesson/">Reference...</a></li>
     </ul>
   </div>
   <!--
@@ -368,7 +368,7 @@ Twitter <a href="http://twitter.com/RR_Oxford">@RR_Oxford</a>.
       <li>Dates as data</li>
       <li>Quality Control</li>
       <li>Exporting data</li>
-      <li><a href="http://www.musicofsound.org/spreadsheet-humanities-lesson/">Reference...</a></li>
+      <li><a href="https://carpentries-incubator.github.io/spreadsheet-humanities-lesson/">Reference...</a></li>
     </ul>
   </div>
 
@@ -379,7 +379,7 @@ Twitter <a href="http://twitter.com/RR_Oxford">@RR_Oxford</a>.
       <li>Filerting and Sorting with OpenRefine</li>
       <li>Examining Numbers in OpenRefine</li>
       <li>Exporting and Saving Data from OpenRefine</li>
-      <li><a href="http://www.musicofsound.org/OpenRefine-humanities-lesson/">Reference...</a></li>
+      <li><a href="https://carpentries-incubator.github.io/OpenRefine-humanities-lesson/">Reference...</a></li>
     </ul>
 </div>
   <div class="col-md-4">
@@ -390,7 +390,7 @@ Twitter <a href="http://twitter.com/RR_Oxford">@RR_Oxford</a>.
       <li>SQL Aggregation</li>
       <li>Joins and aliases</li>
       <li>R and Databases</li>
-      <li><a href="http://www.musicofsound.org/sql-humanities-lesson/">Reference...</a></li>
+      <li><a href="https://carpentries-incubator.github.io/sql-humanities-lesson/">Reference...</a></li>
     </ul>
 </div>
 </div> 
