--- a/index.html
+++ b/index.html
@@ -409,7 +409,7 @@ Twitter <a href="http://twitter.com/RR_Oxford">@RR_Oxford</a>.
   'tools/check' as well.
 -->
 
-<h2 id="setup">Setup</h2>
+<h2> id="setup">Setup</h2>
 
 <p>
 To participate in a Data Carpentry workshop, you will need working copies of the 
