Adding in missing closing tags

--- a/index.html
+++ b/index.html
@@ -467,7 +467,7 @@ once you leave the workshop.
     <div class="col-md-4">
       <h4 id="openrefine-windows">Windows</h4>
       <ul>
-        <li>OpenRefine uses the Java Runtime Enviroment. If you don't already have it installed, install it from <a href="https://java.com/en/download/">here</a>.
+        <li>OpenRefine uses the Java Runtime Environment. If you don't already have it installed, install it from <a href="https://java.com/en/download/">here</a>.</li>
         <li>Download the OpenRefine 2.7 Windows Kit from <a href="http://openrefine.org/download.html">http://openrefine.org</a></li>
         <li>Unzip the downloaded file into a directory by right-clicking and
         selecting “Extract…”. Name that directory something like 'OpenRefine'. <strong>Remember where you extracted it</strong></li>
@@ -483,7 +483,7 @@ once you leave the workshop.
         <li>Download the OpenRefine 2.7 Mac Kit from <a href="http://openrefine.org/download.html">http://openrefine.org</a></li>
         <li>Open the downloaded file and drag the OpenRefine icon to Applications as instructed.</li>
         <li>Launch OpenRefine from Applications.</li>
-        <li>If you receive a warning about installing untrusted applications: Applications -> Utilities -> Terminal and type the following: <code>spctl --add /Applications/OpenRefine.app</code> and try again.
+        <li>If you receive a warning about installing untrusted applications: Applications -> Utilities -> Terminal and type the following: <code>spctl --add /Applications/OpenRefine.app</code> and try again.</li>
 	<li>If OpenRefine does not automatically open for you, point your web browser at http://127.0.0.1:3333/ or http://localhost:3333.</li>
       </ul>
     </div>
