Fixing unclosed tags

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@ day2_pm: "SQL for data management"
 {% endif %}
 
 <h2 id="general">General Information</h2>
-
+-->
 <!--
   INTRODUCTION
 
@@ -82,7 +82,7 @@ our <a href="https://web.maillist.ox.ac.uk/ox/info/rroxford"> mailing
 list</a>, and follow us on
 Twitter <a href="http://twitter.com/RR_Oxford">@RR_Oxford</a>.
 </p>
-
+-->
 <!-- AUDIENCE
 
   Explain who your audience is.  (In particular, tell readers if the
@@ -331,8 +331,8 @@ Twitter <a href="http://twitter.com/RR_Oxford">@RR_Oxford</a>.
    -->
 <!--</div>-->
 
-<!--<div class="row">
-  <div class="col-md-6">
+<div class="row">
+<!--  <div class="col-md-6">
     <h3 id="syllabus-git">Version Control with Git</h3>
     <ul>
       <li>Creating a repository</li>
