--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 layout: workshop      # DON'T CHANGE THIS.
 root: .               # DON'T CHANGE THIS EITHER.  (THANK YOU.)
 carpentry: "dc"    # what kind of Carpentry (must be either "dc" or "swc")
-venue: "Edinburgh University"        # brief name of host site without address (e.g., "Euphoric State University")
+venue: "CANCELLED!!!!"        # brief name of host site without address (e.g., "Euphoric State University")
 address: "Lister Learning and Teaching Centre, Room 3.2"      # full street address of workshop (e.g., "Room A, 123 Forth Street, Blimingen, Euphoria")
 country: "UK"      # lowercase two-letter ISO country code such as "fr" (see https://en.wikipedia.org/wiki/ISO_3166-1)
 language: "EN"     # lowercase two-letter ISO language code such as "fr" (see https://en.wikipedia.org/wiki/ISO_639-1)
